--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+img {
+  width: 20%;
+}
+
 .container {
   max-width: 50%;
   margin: 30px auto;
